tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/Interaction_Service_Line__c.object-meta.xml
<CustomObject>
    <label>Interaction Service Line</label>
    <nameField>
        <label>Interaction Service Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Service Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>