tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>In Dispute</fullName>
            </value>
            <value>
                <fullName>Corrected</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>