tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interaction Service Lines</relationshipLabel>
    <relationshipName>Interaction_Service_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>