tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/fields/Interaction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Summary__c</fullName>
    <label>Interaction Summary</label>
    <referenceTo>InteractionSummary</referenceTo>
    <relationshipLabel>Interaction Service Lines</relationshipLabel>
    <relationshipName>Interaction_Service_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>