tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/fields/Interpreter_Used__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Used__c</fullName>
    <label>Interpreter Used</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an interpreter was used during service delivery. Drives modifier selection in billing export.</description>
</CustomField>