tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/fields/Modifier_1__c.field-meta.xml
<CustomField>
    <fullName>Modifier_1__c</fullName>
    <label>Modifier 1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>