tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/fields/Modifier_2__c.field-meta.xml
<CustomField>
    <fullName>Modifier_2__c</fullName>
    <label>Modifier 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>