tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/fields/POS__c.field-meta.xml
<CustomField>
    <fullName>POS__c</fullName>
    <label>Place of Service</label>
    <type>Picklist</type>
    <description>CMS Place of Service code (e.g., 99 = Other, 11 = Office). Used in CMS-1500 billing export.</description>
    <valueSet>
        <valueSetName>CMS_Place_of_Service</valueSetName>
    </valueSet>
</CustomField>