tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <label>Service Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90791</fullName>
            </value>
            <value>
                <fullName>90832</fullName>
            </value>
            <value>
                <fullName>90834</fullName>
            </value>
            <value>
                <fullName>90837</fullName>
            </value>
            <value>
                <fullName>90839</fullName>
            </value>
            <value>
                <fullName>90846</fullName>
            </value>
            <value>
                <fullName>90847</fullName>
            </value>
            <value>
                <fullName>90853</fullName>
            </value>
            <value>
                <fullName>H0002</fullName>
            </value>
            <value>
                <fullName>H0004</fullName>
            </value>
            <value>
                <fullName>H0023</fullName>
            </value>
            <value>
                <fullName>H2011</fullName>
            </value>
            <value>
                <fullName>T1017</fullName>
            </value>
            <value>
                <fullName>H0043</fullName>
            </value>
            <value>
                <fullName>H0044</fullName>
            </value>
            <value>
                <fullName>H2014</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>