tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/fields/Service_Phase__c.field-meta.xml
<CustomField>
    <fullName>Service_Phase__c</fullName>
    <label>Service Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Tenancy</fullName>
            </value>
            <value>
                <fullName>Tenancy Sustaining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>