tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>