tgthrProgramManagement/force-app/main/default/objects/Interaction_Service_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Billing_Status__c</columns>
    <columns>Client__c</columns>
    <columns>Duration_Minutes__c</columns>
    <columns>Service_Code__c</columns>
    <columns>Service_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>